cmake_minimum_required(VERSION 2.6)

project (HashTable)

add_subdirectory (../table-lib/cmake ../table-lib/cmake)
add_subdirectory (../cwlf-dynamic-test/cmake ../cwlf-dynamic-test/cmake)
add_subdirectory (../test-suite/cmake ../test-suite/cmake)
add_subdirectory (../table-length-test/cmake ../table-length-test/cmake)
add_subdirectory (../table-test/cmake ../table-test/cmake)