cmake_minimum_required	(VERSION 2.8.1)
cmake_policy			(VERSION 2.8.1)

project (HashTable)


add_subdirectory (../table-lib/cmake ../table-lib/cmake)
add_subdirectory (../cwlf-dynamic-test/cmake ../cwlf-dynamic-test/cmake)
add_subdirectory (../test-suite/cmake ../test-suite/cmake)
add_subdirectory (../table-length-test/cmake ../table-length-test/cmake)
add_subdirectory (../table-test/cmake ../table-test/cmake)
add_subdirectory (../system-test/cmake ../system-test/cmake)
add_subdirectory (../table-time-test/cmake ../table-time-test/cmake)
add_subdirectory (../m-test/cmake ../m-test/cmake)
add_subdirectory (../table-two-way-test/cmake ../table-two-way-test/cmake)
# add_subdirectory (../linear-system-test/cmake ../linear-system-test/cmake)
