cmake_minimum_required (VERSION 3.17.0)
cmake_policy           (VERSION 3.17.0)

project (HashTable)

add_subdirectory (../table-lib/cmake ../table-lib/cmake)
add_subdirectory (../lhf-bin-structure/cmake ../lhf-bin-structure/cmake)
add_subdirectory (../m-test/cmake ../m-test/cmake)
add_subdirectory (../evo-bad-set/cmake ../evo-bad-set/cmake)
add_subdirectory (../surjectivity/cmake ../surjectivity/cmake)
add_subdirectory (../probability-distribution/cmake ../probability-distribution/cmake)
add_subdirectory (../test-suite/cmake ../test-suite/cmake)
add_subdirectory (../table-simple-length-test/cmake ../table-simple-length-test/cmake)
add_subdirectory (../table-test/cmake ../table-test/cmake)
add_subdirectory (../system-test/cmake ../system-test/cmake)
add_subdirectory (../stl-compare/cmake ../stl-compare/cmake)
add_subdirectory (../table-time-test/cmake ../table-time-test/cmake)
add_subdirectory (../induction-test/cmake ../induction-test/cmake)
add_subdirectory (../table-two-way-test/cmake ../table-two-way-test/cmake)
